--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -1,1 +1,1 @@
-﻿{"EmoteUse": false, "Keyword": "hello hi hey hai", "KeywordUse": false, "Emote": "HeyGuys VoHiYo kaypikeHeyGuys", "permission": "everyone", "info": ""}
+﻿{"EmoteUse": false, "Keyword": "greetings hello hi hey hai", "KeywordUse": false, "Emote": "HeyGuys VoHiYo kaypikeHeyGuys", "permission": "everyone", "info": ""}
