--- a/UI_Config.json
+++ b/UI_Config.json
@@ -18,7 +18,7 @@
         "label": "Keywords", 
         "tooltip": "Space seperated list of keywords (ignores case)", 
         "type": "textbox", 
-        "value": "hello hi hey hai"
+        "value": "greetings hello hi hey hai"
     }, 
     "KeywordUse": {
         "group": "Core", 
